typescript/checker/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            651,
        ),
        hi: BytePos(
            660,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments19.ts:7:33
  |
7 |             var capture = () => arguments;  // Should trigger an '_arguments' capture into function 'h'
  |                                 ^^^^^^^^^

